# oodf

./: .gitignore  Makefile
oodf/: CMakeLists.txt  tsconfig.json
oodf/frontend/: CMakeLists.txt
oodf/frontend/js/: index.html  loader.ts  main.ts  tsconfig.json
oodf/frontend/jsbind/: jsbind.ts  tsconfig.json
oodf/frontend/main/: main.cpp
oodf/frontend/test/: CMakeLists.txt  harness.ts
oodf/js_api/: CMakeLists.txt  common_types.hpp
oodf/js_api/dom/: event_target.hpp
oodf/js_api/impl/: externref_action.hpp  externref_manip_freelist.cpp  externref_manip_table.cpp  runtime.cpp
oodf/js_api/test/: CMakeLists.txt  function.cpp  promise.cpp  tsconfig.json
oodf/js_api/test/tests/: fail.cpp
oodf/js_api/test/util/: CMakeLists.txt  harness.cpp  harness.hpp  harness.ts  tsconfig.json
oodf/tool/: CMakeLists.txt  JsBindToolchain.cmake  clang-plugin.cpp  clang.py
oodf/util/: CMakeLists.txt  property.hpp  types.hpp
